# todo-axum-wasi

./: .env  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  rust-toolchain.toml
.cargo/: config.toml
migrations/: 20230415133845_init.down.sql  20230415133845_init.up.sql
src/: main.rs
src/repo/: mod.rs  todos.rs  users.rs
src/services/: mod.rs  todos.rs  users.rs
