[package]
name = "todo-axum-wasi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.20", default-features = false, features = ["form", "http1", "json", "matched-path", "original-uri", "query", "headers"] }
axum-extra = "0.7.7"
hmac = "0.12.1"
http = "0.2.9"
jwt = "0.16.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["serde_derive"] }
serde_json = "1.0.95"
sha2 = "0.10.7"
bcrypt = "0.15.0"
validator = { version = "0.16.1", features = ["validator_derive", "derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate", "chrono"] }
tokio = { version = "1.25.1", features = ["full"] }
hyper = { version = "0.14.26", features = ["full"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
chrono = { version = "0.4.11", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
sqlx_wasi = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate", "chrono"] }
tokio_wasi = { version = "1.25.2", features = ["full"] }
hyper_wasi = { version = "0.15.2", features = ["full"] }
uuid = { version = "1.3.1", features = ["v4", "serde", "wasm-bindgen"] }
chrono-wasi = { version = "0.4.11", features = ["serde"] }
